test/variables/remote/notuple.chpl
on Locales.last var (x, y) = (1, 2);
on Locales.last var x: int, (y,z) = (1,2), w: int;
